# cpp-dev-template

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  SCRIPTS_README.md  init.sh  setup.sh  verify.sh
docs/: CHEATSHEET.md  SCRIPTS_GUIDE.md  USAGE_GUIDE.md
include/: config.hpp  utils.hpp
src/: main.cpp
